--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -264,6 +264,14 @@ li.c{float:none !important;width:0px !important;height:0px !important;}
 #admin-panel div.contact-table input.edit:hover  {background-position: -140px bottom;}
 #admin-panel div.contact-table input.delete:hover{background-position: -160px bottom;}
 
+#admin-panel div.contact-table table tbody tr:hover{background:#edf3f8;}
+#admin-panel div.contact-table table tbody td a.underline{text-decoration:underline;}
+#admin-panel .main-panel .wider{width:100%;float:left;}
+#admin-panel .main-panel .wider .feedback-details{width:98%;float:left;}
+#admin-panel .main-panel .wider .feedback-details .author-info{padding:2px;padding-left:16px;display:block;margin-left:5px;word-wrap: break-word;}
+#admin-panel .main-panel .wider .feedback-details .feedback-meta{padding:2px;padding-left:16px;display:block;margin-left:5px;}
+#admin-panel div.contact-table table td.avatar{width:120px;text-align:center;}
+
 /* admins page */
 #admin-panel .main-panel .block .label{width:140px;float:left;clear:left;font-size:11px;font-weight:bold;padding:8px 0px 0px 0px;}
 #admin-panel .main-panel .block .label label{}
