--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -264,6 +264,11 @@ li.c{float:none !important;width:0px !important;height:0px !important;}
 #admin-panel div.contact-table input.contact-edit:hover  {background-position: -140px -17px;}
 #admin-panel div.contact-table input.contact-delete:hover{background-position: -160px -17px;}
 
+#admin-panel div.contact-table input.widget-edit  {background-position: -140px 0px;}
+#admin-panel div.contact-table input.widget-delete{background-position: -160px 0px;}
+#admin-panel div.contact-table input.widget-edit:hover  {background-position: -140px -17px;}
+#admin-panel div.contact-table input.widget-delete:hover{background-position: -160px -17px;}
+
 #admin-panel div.contact-table table tbody tr:hover{background:#edf3f8;}
 #admin-panel div.contact-table table tbody td a.underline{text-decoration:underline;}
 #admin-panel .main-panel .wider{width:100%;float:left;}
