--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -216,6 +216,7 @@ li.c{float:none !important;width:0px !important;height:0px !important;}
 #admin-panel .main-panel .block .templates .template-block .the-template .template-info .template-preview{position:absolute;top:0;right:0;padding-right:4px;}
 #admin-panel .main-panel .block .templates .template-block .the-template .template-info .template-name a{color:#3b5e75;font-weight:bold;}
 #admin-panel .main-panel .block .templates .template-block .the-template .template-info .template-preview a{color:#999999;}
+#admin-panel .graybg{background:#f4f4f4;}
 #footer{width:960px;margin:0 auto;padding-top:15px;color:#525659;padding-bottom:10px;}
 #footer a{text-decoration:underline;color:#525659;}
 #footer a:hover{text-decoration:none;}
