--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -130,6 +130,11 @@ sup.count{background:#d92222;text-shadow:#a31a1a 0px -1px;color:#FFF;font-size:1
 #admin-panel .main-panel .right .feedback-details{width:90%;float:left;}
 
 #admin-panel .main-panel .right .feedback-details .author-info{padding:2px;display:block;margin-left:5px; word-wrap:break-word }
+#admin-panel .main-panel .right .feedback-details .author-info .author-social{color:#567aa7;font-size:10px;}
+#admin-panel .main-panel .right .feedback-details .author-info .author-social img{vertical-align:bottom;}
+#admin-panel .main-panel .right .feedback-details .author-info .fb{color:#567aa7}
+#admin-panel .main-panel .right .feedback-details .author-info .tw{color:#6fb2b8}
+#admin-panel .main-panel .right .feedback-details .author-info .in{color:#5e99be}
 #admin-panel .main-panel .right .feedback-details .author-info h3 span{font-weight:normal;color:#999999;font-size:10px;margin-left:4px;}
 #admin-panel .main-panel .right .feedback-details .author-info p{margin:5px 0px 3px;font-size:11px;}
 
