--- a/public/css/romanticc.css
+++ b/public/css/romanticc.css
@@ -366,38 +366,29 @@ div.undo-bar {
 }
 
 .checky-bar {
-    position: fixed; 
+    /*position: relative;*/ 
     width: 450px;
-    font-size: 1.2em;
+    font-size: 1.0em;
     font-weight: bold;
-    /*background: #fef1b5;*/
-    text-align: center;
-    left: 40%;
-    top: 23%;
-    z-index: 200;
-    padding: 5px;
+    text-align: center; 
     border-radius: 12px;
-    margin: 2px 5px;
+    margin-left:120px;
+    margin-top:-3px;
 }
 
 .checky-bar > div { 
-    position: fixed;    
-    width: 550px;
-    font-size: 1.2em;
     font-weight: bold;
     text-align: center;
-    left: 33%;
-    top: 20%;
-    background-color: #fef1b5;
-    z-index: 200; 
+    background-color: #fef1b5; 
     padding: 5px;
     -webkit-border-radius:12px;
     -moz-border-radius:12px;
     border-radius:12px;
-    margin:2px 5px;
+    /*margin:2px 5px;*/
 }
 
-a.undo, a.close-checky {
+
+a.undo, a.close-checky, a.hide-checkybar {
     color: #0000CC;
     font-size: 0.9em;
 }
