--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -315,7 +315,7 @@ li.c{float:none !important;width:0px !important;height:0px !important;}
 
 
 #admin-panel:after,.the-feedbacks:after,.sorter-bar:after,.admin-filter-bar:after,.block:after,.grids:after,
-templates ul:after, .category-picker:after
+templates ul:after, .category-picker:after, .category-box:after
 { 
  content: ".";  
  display: block; 
