--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -110,7 +110,7 @@ sup.count{background:#d92222;text-shadow:#a31a1a 0px -1px;color:#FFF;font-size:1
 #admin-panel .main-panel .admin-filter-bar select{padding:1px 3px;color:#616161;border:1px solid #d6d6d6;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;margin:2px 5px;}
 #admin-panel .main-panel .admin-filter-bar input{border:none;padding:0px 4px;}
 
-#admin-panel .main-panel .admin-sorter-bar{padding:8px 0px;display:block;border-top:1px solid #b0c4d5;border-bottom:1px solid #b0c4d5;background:#cfdbe5;font-size:10px;}
+#admin-panel .main-panel .admin-sorter-bar{padding:8px 0px;display:block;border-top:1px solid #b0c4d5;border-bottom:1px solid #b0c4d5;background:#cfdbe5;font-size:10px;position:relative}
 #admin-panel .main-panel .admin-sorter-bar select{font-size:10px;padding:1px 3px;color:#616161;border:1px solid #d6d6d6;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;margin:2px 2px;}
 
 #admin-panel .main-panel .admin-sorter-bar .pagination{text-align:right;padding-right:10px;font-size:11px;}
