--- a/public/css/romanticc.css
+++ b/public/css/romanticc.css
@@ -427,120 +427,129 @@ visibility: hidden;
     text-shadow: 0 1px 0 #FFFFFF;
 }
 
-					.category-box {
-						display:block;width:100%;
-					}
-					ul.category-box{
-						margin:5px 0px;
-						list-style:none;
-						font-size:11px;font-weight:bold;
-					}
-					.category-box li{
-						padding:3px 0px;
-						margin:2px 0px;
-					}
-					.category-box li a{
-						-webkit-border-radius:11px;
-						-moz-border-radius:11px;
-						border-radius:11px;
-						padding:4px 8px;
-						text-decoration:none !important;
-					}
-					.category-box li a:hover,.category-box li a.Matched{
-						background:#cfdbe5;
-						color:#4e6c82 !important;
-					}
-					.permissions{padding:0px 25px 10px 35px;}
-					.permissions h3{font-size:13px !important;margin-bottom:0px !important;}
-					.full-permission{background:url(../img/ico-full-permission.png) no-repeat left top;}
-					.limited-permission{background:url(../img/ico-limited-permission.png) no-repeat left top;}
-					.private-permission{background:url(../img/ico-private-permission.png) no-repeat left top;}
-					
-					.full-permission h3{color:#4b9e01 !important;}
-					.full-permission p{font-size:11px;color:#4b9e01;line-height:normal;}
-					.limited-permission h3{color:#e3b013 !important;}
-					.limited-permission p{font-size:11px;color:#e3b013;line-height:normal;}
-					.private-permission h3{color:#8a979b !important;}
-					.private-permission p{font-size:11px;color:#8a979b;line-height:normal;}
-					.feedback-info{
-						border:1px solid #cccccc;	
-						-webkit-border-radius:6px;
-						-moz-border-radius:6px;
-						border-radius:6px;
-						margin-right:25px;
-						overflow:hidden;
-					}
-					.feedback-info textarea{padding:10px;display:block;width:90%;margin:0 auto;overflow:hidden;border:none;font-family:Arial, Helvetica, sans-serif;}
-					.feedback-info .feedback-text{padding:10px;color:#777777;}
-					.feedback-info .feedback-status{padding:2px 10px;background:#edeede;font-size:11px;border-bottom:1px solid #ffffff;}
-					.feedback-info .feedback-status span{color:#b6b096;padding-left:10px;}
-					.feedback-info .feedback-status a.edit-feedback{color:#6a7882;}
-					.feedback-info .feedback-data{padding:10px 17px;background:#efefef;font-size:11px;border-top:1px solid #cccccc;color:#999999;}
-					.feedback-info-menu{padding:10px 15px 10px 30px;}
-					.feedback-info-menu a{
-						color:#4e6c82;
-						-webkit-border-radius:11px;
-						-moz-border-radius:11px;
-						border-radius:11px;
-						padding:6px 8px 6px 26px;
-						font-weight:bold;
-						background:url(../img/ico-feedback-info-menu.png) no-repeat center left;
-					}
-					.feedback-info-menu a:hover{
-						background:url(../img/ico-feedback-info-menu.png) #e7edf2 no-repeat center left;
-					}
-					.feedback-info-menu a.menu-btn{}
-					.feedback-info-menu a.replyto{background-position:0px 4px;}
-					.feedback-info-menu a.forward{background-position:0px -15px;}
-					.feedback-info-menu a.publish{background-position:0px -32px;}
-					.feedback-info-menu a.flag{background-position:0px -50px;}
-					.feedback-info-menu a.delete{background:#6a7882 url(../img/ico-feedback-info-menu.png) no-repeat;background-position:0px -69px;text-shadow:0px -1px #475057;color:#FFF;}
-					.feedback-info-menu a.delete:hover{background:#7e8c96 url(../img/ico-feedback-info-menu.png) no-repeat;background-position:0px -69px;}
-					.feedback-data-table{
-						margin-left:10px;
-						font-size:11px;
-					}
-					.feedback-data-table td.title{
-						color:#363636;width:65px;vertical-align:top;
-					}
-					.feedback-data-table td.header{
-						color:#343434;font-weight:bold;
-					}
-					.feedback-data-table td.header a{
-						font-weight:normal;
-					}
-					.newbtn{background:#949ca1;
-						-webkit-border-radius:14px;
-						-moz-border-radius:14px;
-						border-radius:14px;
-						color:#4e5b63;
-						font-weight:bold;
-						padding:5px 17px;
-						border:none;
-						cursor:pointer;
-						text-shadow:0px 1px #abb2b6;
-					}
-					.newbtn:hover{
-						color:#FFF;
-						background:#6a7882;
-						box-shadow:0px 0px 15px #6fcae5;
-						text-shadow:0px -1px #3b4349;
-					}
-					.newbtn-small{background:#949ca1;
-						-webkit-border-radius:14px;
-						-moz-border-radius:14px;
-						border-radius:14px;
-						color:#4e5b63;
-						font-weight:bold;
-						padding:3px 7px;
-						border:none;
-						cursor:pointer;
-						text-shadow:0px 1px #abb2b6;
-						font-size:10px;
-					}
-					.newbtn-small:hover{
-						color:#FFF;
-						background:#6a7882;
-						box-shadow:0px 0px 6px #6fcae5;
-						text-shadow:0px -1px #3b4349;
-					}
+.category-box {
+    display:block;width:100%;
+}
+ul.category-box{
+    margin:5px 0px;
+    list-style:none;
+    font-size:11px;font-weight:bold;
+}
+.category-box li{
+    padding:3px 0px;
+    margin:2px 0px;
+}
+.category-box li a{
+    -webkit-border-radius:11px;
+    -moz-border-radius:11px;
+    border-radius:11px;
+    padding:4px 8px;
+    text-decoration:none !important;
+}
+.category-box li a:hover,.category-box li a.Matched{
+    background:#cfdbe5;
+    color:#4e6c82 !important;
+}
+.permissions{padding:0px 25px 10px 35px;}
+.permissions h3{font-size:13px !important;margin-bottom:0px !important;}
+.full-permission{background:url(../img/ico-full-permission.png) no-repeat left top;}
+.limited-permission{background:url(../img/ico-limited-permission.png) no-repeat left top;}
+.private-permission{background:url(../img/ico-private-permission.png) no-repeat left top;}
+
+.full-permission h3{color:#4b9e01 !important;}
+.full-permission p{font-size:11px;color:#4b9e01;line-height:normal;}
+.limited-permission h3{color:#e3b013 !important;}
+.limited-permission p{font-size:11px;color:#e3b013;line-height:normal;}
+.private-permission h3{color:#8a979b !important;}
+.private-permission p{font-size:11px;color:#8a979b;line-height:normal;}
+.feedback-info{
+    border:1px solid #cccccc;	
+    -webkit-border-radius:6px;
+    -moz-border-radius:6px;
+    border-radius:6px;
+    margin-right:25px;
+    overflow:hidden;
+}
+.feedback-info textarea{padding:10px;display:block;width:90%;margin:0 auto;overflow:hidden;border:none;font-family:Arial, Helvetica, sans-serif;}
+.feedback-info .feedback-text{padding:10px;color:#777777;}
+.feedback-info .feedback-status{padding:2px 10px;background:#edeede;font-size:11px;border-bottom:1px solid #ffffff;}
+.feedback-info .feedback-status span{color:#b6b096;padding-left:10px;}
+.feedback-info .feedback-status a.edit-feedback{color:#6a7882;}
+.feedback-info .feedback-data{padding:10px 17px;background:#efefef;font-size:11px;border-top:1px solid #cccccc;color:#999999;}
+.feedback-info-menu{padding:10px 15px 10px 30px;}
+.feedback-info-menu a{
+    color:#4e6c82;
+    -webkit-border-radius:11px;
+    -moz-border-radius:11px;
+    border-radius:11px;
+    padding:6px 8px 6px 26px;
+    font-weight:bold;
+    background:url(../img/ico-feedback-info-menu.png) no-repeat center left;
+}
+.feedback-info-menu a:hover{
+    background:url(../img/ico-feedback-info-menu.png) #e7edf2 no-repeat center left;
+}
+
+.feedback-info-menu a.matched{
+    background:url(../img/ico-feedback-info-menu.png) #e7edf2 no-repeat center left;
+}
+
+
+.feedback-info-menu a.menu-btn{}
+.feedback-info-menu a.replyto{background-position:0px 4px;}
+.feedback-info-menu a.forward{background-position:0px -15px;}
+.feedback-info-menu a.publish{background-position:0px -32px;}
+.feedback-info-menu a.flagged{background-position:0px -50px;}
+.feedback-info-menu a.delete{background:#6a7882 url(../img/ico-feedback-info-menu.png) no-repeat;background-position:0px -69px;text-shadow:0px -1px #475057;color:#FFF;}
+.feedback-info-menu a.delete:hover{background:#7e8c96 url(../img/ico-feedback-info-menu.png) no-repeat;background-position:0px -69px;}
+.feedback-data-table{
+    margin-left:10px;
+    font-size:11px;
+}
+.feedback-data-table td.title{
+    color:#363636;width:65px;vertical-align:top;
+}
+.feedback-data-table td.header{
+    color:#343434;font-weight:bold;
+}
+.feedback-data-table td.header a{
+    font-weight:normal;
+}
+.newbtn{background:#949ca1;
+    -webkit-border-radius:14px;
+    -moz-border-radius:14px;
+    border-radius:14px;
+    color:#4e5b63;
+    font-weight:bold;
+    padding:5px 17px;
+    border:none;
+    cursor:pointer;
+    text-shadow:0px 1px #abb2b6;
+}
+.newbtn:hover{
+    color:#FFF;
+    background:#6a7882;
+    box-shadow:0px 0px 15px #6fcae5;
+    text-shadow:0px -1px #3b4349;
+}
+.newbtn-small{background:#949ca1;
+    -webkit-border-radius:14px;
+    -moz-border-radius:14px;
+    border-radius:14px;
+    color:#4e5b63;
+    font-weight:bold;
+    padding:3px 7px;
+    border:none;
+    cursor:pointer;
+    text-shadow:0px 1px #abb2b6;
+    font-size:10px;
+}
+.newbtn-small:hover{
+    color:#FFF;
+    background:#6a7882;
+    box-shadow:0px 0px 6px #6fcae5;
+    text-shadow:0px -1px #3b4349;
+}
+
+.modify-page{left:234px;right:auto;} 
+.modify-page .popup-arrow{background:url(../img/popup-arrow-left.png) no-repeat;width:9px;height:17px;position:absolute !important;left:-9px;top:24px;right:auto;}                    
