--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -313,7 +313,6 @@ li.c{float:none !important;width:0px !important;height:0px !important;}
 
 #admin-panel span.tooltip{-webkit-border-radius:10px;-moz-border-radius:10px;border-radius:10px;box-shadow:#dadada 0px 3px 3px;position:absolute;z-index:10000;padding:4px 6px;background:#c9e5f3;color:#6b7880;margin-left:5px;}}
 
-
 #admin-panel:after,.the-feedbacks:after,.sorter-bar:after,.admin-filter-bar:after,.block:after,.grids:after,
 templates ul:after, .category-picker:after, .category-box:after
 { 
@@ -323,6 +322,28 @@ templates ul:after, .category-picker:after, .category-box:after
  clear: both;
  visibility: hidden; 
 }
+
+/* dashboard styles */
+#admin-panel .dashboard-updates{float:left;width:440px;border:1px solid #dfdfdf;-webkit-border-radius:6px;-moz-border-radius:6px;border-radius:6px;overflow:hidden;color:#3b5e75;} 
+#admin-panel .dashboard-pie-chart{float:left;width:220px;} 
+
+#admin-panel .dashboard-updates-title{background:#ededed;padding:10px;}
+#admin-panel .dashboard-updates-list{padding:7px 10px 7px 40px;margin:0px 0px;border-top:1px solid #dfdfdf;color:#777777;background:url(../img/ico-dashboard-updates.png) no-repeat left;}
+#admin-panel .dashboard-updates .pending{background-position:0px 0px;}
+#admin-panel .dashboard-updates .positive{background-position:0px -30px;}
+#admin-panel .dashboard-updates .neutral{background-position:0px -90px;}
+#admin-panel .dashboard-updates .negative{background-position:0px -60px;}
+#admin-panel .dashboard-updates .ignored{background-position:0px -120px;}
+#admin-panel .dashboard-graybox{border:1px solid #dfdfdf;background:#f7f7f7;padding:10px;background:#f7f7f7;}
+#admin-panel .dashboard-graybox:after{content: ".";  
+ display: block; 
+ height: 0; 
+ clear: both;
+ visibility: hidden; }
+ 
+#admin-panel .dashboard-pie-chart .overall{text-align:center;display:block;font-weight:bold;color:#1e1e1e;margin-top:-20px;}
+#admin-panel .dashboard-graybox h3{margin:0px !important;padding:2px 10px;font-size:12px !important;} 
+#admin-panel .dashboard-graybox p{margin:0px !important;padding:2px 10px !important;line-height:normal !important;font-size:12px;}
 
 #widget-setup-block{
     background:#f4f4f4;	
