--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -325,7 +325,7 @@ templates ul:after, .category-picker:after, .category-box:after
 
 /* dashboard styles */
 #admin-panel .dashboard-updates{float:left;width:440px;border:1px solid #dfdfdf;-webkit-border-radius:6px;-moz-border-radius:6px;border-radius:6px;overflow:hidden;color:#3b5e75;} 
-#admin-panel .dashboard-pie-chart{float:left;width:220px;} 
+#admin-panel .dashboard-pie-chart{float:left;margin-left:20px;margin-top:-13px} 
 
 #admin-panel .dashboard-updates-title{background:#ededed;padding:10px;}
 #admin-panel .dashboard-updates-list{padding:7px 10px 7px 40px;margin:0px 0px;border-top:1px solid #dfdfdf;color:#777777;background:url(../img/ico-dashboard-updates.png) no-repeat left;}
