--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -239,6 +239,7 @@ li.c{float:none !important;width:0px !important;height:0px !important;}
 /* error messages */
 #admin-panel .message{padding:3px 4px;font-size:11px;font-weight:bold;-webkit-border-radius:6px;-moz-border-radius:6px;border-radius:6px;display:inline;}
 #admin-panel .updated{background:#ffec93;color:#be6904;}
+#admin-panel .error-msg{color:red; padding-left:10px}
 
 /* admin table styles */
 #admin-panel table.regular-table {width:100%;font-size:11px;}
