--- a/public/css/flags_widget.css
+++ b/public/css/flags_widget.css
@@ -9,6 +9,13 @@
     right:2px;
 }
 
+.boxSolo .flag{
+	width: 16px;
+	height: 11px;
+	margin-left:5px;
+	margin-top:3px;
+	position:relative;
+}
 .flag-ad {background-position: -16px 0}
 .flag-ae {background-position: -32px 0}
 .flag-af {background-position: -48px 0}
