--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -382,6 +382,12 @@ background:url(../img/false-border.png) repeat-x bottom;
 padding:5px 10px;
 position:relative;
 }
+
+.widget-pagination{padding:0px 10px 10px;}
+.activePage{color:#7e7e7e;text-decoration:underline;}
+.widget-create{position:absolute;top:5px;right:15px;font-size:12px;color:#3f4a53;text-shadow:#889096 0px 1px;font-weight:bold}
+.widget-create:hover{color:#97b2c6;text-shadow:#373a3d 0px 1px;}
+
 .templates ul{list-style:none}
 .templates ul li{width:84px;}
 .widget-opts a.button{
@@ -434,6 +440,9 @@ padding:8px 12px;
 background:#eceff1;
 }
 .widget-block .html-code textarea{display:block;width:338px;height:133px;border:none;padding:10px;font-size:11px;}
+
+
+
 .feedback-td-font { font-size: 12px; }
 
 #lightbox {
