--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -413,6 +413,7 @@ border:1px solid #c1c8d0;
 font-weight:bold;
 }
 .widget-opts a.button-gray:hover{background:#dce9f5;}
+/*
 #widget-preview{
 width:360px;
 margin-left:19px;
@@ -429,6 +430,7 @@ border-radius:4px;
 margin-bottom:15px;
 overflow:hidden;
 }
+
 .widget-block h2{
 display:block;
 border-top:1px solid #ffffff;
@@ -440,7 +442,7 @@ padding:8px 12px;
 background:#eceff1;
 }
 .widget-block .html-code textarea{display:block;width:338px;height:133px;border:none;padding:10px;font-size:11px;}
-
+*/
 
 
 .feedback-td-font { font-size: 12px; }
