--- a/public/css/romanticc.css
+++ b/public/css/romanticc.css
@@ -427,6 +427,9 @@ visibility: hidden;
     text-shadow: 0 1px 0 #FFFFFF;
 }
 
+.woops h2{ margin: 0; line-height: 1; text-align: center; color: #777; }
+.woops p{ margin: 0; }
+
 .category-box {
     display:block;width:100%;
 }
