--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -579,6 +579,15 @@ a.button-gray:hover{background:#dce9f5;}
     top:740px;
     left:130px;
 }
+
+a.widget-overview-btn {
+    color: #DEDEDE;    
+}
+
+a.widget-overview-btn:hover {
+    color: #f0f0f0;    
+}
+
 .widget-block{
     border:1px solid #c8ced2;
     -webkit-border-radius:4px;
