--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -573,11 +573,8 @@ a.button-gray{
 a.button-gray:hover{background:#dce9f5;}
 #widget-preview{
     width:360px;
-    margin-left:19px;
-    float:left;
-    position:absolute;
-    top:1000px;
-    left:130px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 a.widget-overview-btn {
